# unnamed-hex-tile-mmo

./: .gitignore  ActionBar.py  Actor.py  Asset.py  Assets.py  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Config.py  Console.py  Event.py  GUIDANCE.md  HxPx.py  Overlay.py  Quickle.py  README.md  Scene.py  Session.py  StateManager.py  Tile.py  Ui.py  analysis.sql  development.db  init.sql  recipe_decompose.sql  requirements.txt  run.py  rustc-ice-2026-04-09T06_05_51-33780.txt  server.py  setup.py  task.txt
.cargo/: config.toml
crates/client/: Cargo.toml
crates/client/src/: main.rs  network.rs
crates/client/src/components/: mod.rs
crates/client/src/plugins/: diagnostics.rs  flyover.rs  mod.rs  ui.rs  vignette.rs  world_streaming.rs
crates/client/src/resources/: mod.rs
crates/client/src/systems/: ability_prediction.rs  action_bar.rs  actor.rs  actor_dead_visibility.rs  admin.rs  animator.rs  attack_telegraph.rs  camera.rs  character_panel.rs  character_panel_respec.rs  combat.rs  combat_log.rs  combat_ui.rs  effect.rs  input.rs  mod.rs  prediction.rs  renet.rs  resolved_threats.rs  resource_bars.rs  target_cursor.rs  target_frame.rs  target_indicator.rs  targeting.rs  threat_icons.rs  tier_lock_range_indicator.rs  ui.rs  world.rs
crates/common/: Cargo.toml
crates/common/src/: camera.rs  chunk.rs  glyphs.rs  hex_decimate.rs  hex_lattice.rs  hex_slope.rs  hex_spatial_grid.rs  lib.rs  message.rs  network.rs  numfmt.rs  plate_tags.rs  spatial_difficulty.rs  timers.rs
crates/common/src/components/: engagement.rs  heading.rs  heal.rs  keybits.rs  loaded_by.rs  mod.rs  movement_intent_state.rs  position.rs  recovery.rs  returning.rs  stagger.rs
crates/common/src/plugins/: controlled.rs  nntree.rs
crates/common/src/resources/: map.rs
crates/common/src/systems/: movement.rs  physics.rs  targeting.rs  world.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs  network.rs
crates/server/src/components/: mod.rs  target_lock.rs
crates/server/src/plugins/: behaviour.rs  metrics.rs  mod.rs  world_streaming.rs
crates/server/src/resources/: engagement_budget.rs  event_registry.rs  mod.rs  summary_cache.rs  terrain.rs
crates/server/src/systems/: actor.rs  aoi.rs  combat.rs  diagnostics.rs  engagement_cleanup.rs  engagement_spawner.rs  input.rs  mod.rs  npc_ability_usage.rs  reaction_queue.rs  renet.rs  stagger.rs  summary.rs  targeting.rs  world.rs
src/: ActionBar.py  Actor.py  Asset.py  Behaviour.py  Camera.py  Cargo.toml  Event.py  HxPx.py  LogId.py  Overlay.py  Scene.py  StateManager.py  Tile.py  run-client.rs  run-server.rs  run.py  server.py
src/.cargo/: config.toml
src/Scene/: Generator.py  Scene.py
src/client/: input.rs  mod.rs  resources.rs
src/client/assets/materials/: grass.rs
src/client/components/: animationconfig.rs  mod.rs
src/client/plugins/: diagnostics.rs  mod.rs  ui.rs  vignette.rs
src/client/plugins/console/: actions.rs  mod.rs  navigation.rs  state.rs  ui_simple.rs
src/client/plugins/diagnostics/: config.rs  grid.rs  network_ui.rs  perf_ui.rs  toggles.rs
src/client/resources/: mod.rs
src/client/systems/: ability_prediction.rs  action_bar.rs  actor.rs  actor_dead_visibility.rs  animator.rs  assets.rs  attack_telegraph.rs  camera.rs  character_panel.rs  character_panel_respec.rs  combat.rs  combat_log.rs  combat_ui.rs  combat_vignette.rs  debug_grid.rs  debug_resources.rs  debug_toggles.rs  do_server_events.rs  effect.rs  input.rs  mod.rs  prediction.rs  projectile.rs  renet.rs  resolved_threats.rs  resource_bars.rs  spawner_viz.rs  sprites.rs  target_cursor.rs  target_frame.rs  target_indicator.rs  targeting.rs  threat_icons.rs  tier_lock_range_indicator.rs  try_events.rs  ui.rs  update_animations.rs  update_sprites.rs  world.rs
src/common/: chunk.rs  components.rs  hx.rs  hxpx.rs  input.rs  message.rs  metrics.rs  mod.rs  spatial_difficulty.rs
src/common/components/: ally_target.rs  animationconfig.rs  behaviour.rs  engagement.rs  gcd.rs  heading.rs  hex_assignment.rs  hx.rs  keybits.rs  message.rs  mod.rs  movement_intent_state.rs  movement_prediction.rs  npc_recovery.rs  offset.rs  position.rs  prelude.rs  projectile.rs  reaction_queue.rs  recovery.rs  resources.rs  spawner.rs  target.rs  targeting_state.rs  tier_lock.rs
src/common/components/behaviour/: mod.rs
src/common/components/entity_type/: actor.rs  decorator.rs  mod.rs
src/common/plugins/: controlled.rs  mod.rs  nntree.rs
src/common/resources/: map.rs  mod.rs
src/common/systems/: actor.rs  combat_state.rs  gcd.rs  handle_input.rs  input.rs  mod.rs  movement.rs  physics.rs  resources.rs  targeting.rs  world.rs
src/console/: CmdRecalculateRecipes.py
src/server/: mod.rs  resources.rs
src/server/components/: mod.rs  returning.rs  target_lock.rs
src/server/plugins/: behaviour.rs  metrics.rs
src/server/resources/: engagement_budget.rs  map.rs  mod.rs  terrain.rs
src/server/systems/: actor.rs  aoi.rs  combat.rs  diagnostics.rs  discover_tiles.rs  do_events.rs  do_manage_connections.rs  engagement_cleanup.rs  engagement_spawner.rs  input.rs  mod.rs  npc_ability_usage.rs  physics.rs  projectile.rs  reaction_queue.rs  renet.rs  spawner.rs  targeting.rs  try_client_events.rs  world.rs
(+366 files in other folders)
