[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/client",
    "crates/server",
    "crates/qrz",
    "crates/console",
    "crates/terrain",
    "crates/terrain-viewer",
]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false
