[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/common-bevy",
    "crates/client",
    "crates/server",
    "crates/qrz",
    "crates/console",
    "crates/world",
    "crates/world-viewer",
]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false
