[package]
name = "unnamed-hex-tile-mmo"
edition = "2021"
version = "0.1.0"
authors = ["Reed Debaets <reed.debaets@gmail.com>"]

[dependencies]
bevy = { version = "0.14", features = ["dynamic_linking"] }
bevy_renet = "0.0.12"
bimap = "0.6"
bincode = "1.3"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
noise = { version = "0.9" }
renet = { version = "0.0.16", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false

[[bin]]
name = "server"
path = "run-server.rs"

[[bin]]
name = "client"
path = "run-client.rs"
