[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
common-bevy = { path = "../common-bevy" }
bevy = { version = "0.18", features = ["dynamic_linking"] }
bevy_easings = "0.18"
renet_netcode = "2"
bimap = "0"
bincode = { version = "2", default-features = false, features = ["std", "serde"] }
chrono = "0"
pathfinding = "4"
rand = "0.9"
renet = "2"
serde = { version = "1", features = ["derive"] }
tinyvec = { version = "1", features = ["serde"] }

[dependencies.qrz]
path = "../qrz"

[dependencies.terrain]
path = "../terrain"
